# neurocourier-tsp-metaheuristics

./: .gitignore  LICENSE  README.md  local_search.py  pyproject.toml
experiments/: benchmark.py
legacy/antColony_original/: ant.py  config.py  optimizer.py
src/neurocourier/antColony/: README.md  graph_tools.py  main.py
src/neurocourier/solvers/: __init__.py
src/neurocourier/solvers/aco/: __init__.py  aco_solver.py  params.py
src/neurocourier/solvers/sa/: __init__.py  sa_solver.py  simulated-annealing.py
src/neurocourier/tsp/: distance.py  instances.py  tour.py  types.py
